<resources>
    <string name="app_name">Signup Login Realtime</string>

    <string name="prompt">Category</string>
    <string-array name="items">
        <item>Utilities</item>
        <item>Clothes</item>
        <item>Rent</item>
        <item>Food</item>
        <item>Others</item>
    </string-array>

    <string name="name">Entity</string>
    <string name="cat">CATEGORIES</string>
    <string name="select">Select an item</string>
    <string name="phone">eg 079900234</string>
    <string name="account">Business Account</string>
    <string name="paybill">Business PayBill</string>
    <string name="currency">Ksh</string>
    <string name="add">Add</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pay_now">Pay Now</string>
    <string name="utility">Utility</string>
    <string name="payment_type">Payment Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_num">+254701234568</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="back">TODO</string>
    <string name="paybills">Paybill</string>
    <string name="ksh">KSH</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="_247247">247247</string>

</resources>