<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daraja">


    <Button
        android:id="@+id/btnPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/pay_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAmount" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/utility_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-black"
        android:hint="@string/utility"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <TextView
        android:id="@+id/paymentType_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="46dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/payment_type"
        app:layout_constraintStart_toStartOf="@id/back_btn"
        app:layout_constraintTop_toBottomOf="@id/utility_textView" />

    <TextView
        android:id="@+id/phoneNumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/paymentType_textView"
        app:layout_constraintTop_toBottomOf="@id/paymentType_textView"/>

    <TextView
        android:id="@+id/etPhone"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_num"
        android:textAlignment="center"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/paymentTypeResult_textView"
        app:layout_constraintTop_toBottomOf="@id/paymentTypeResult_textView"/>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:layout_marginTop="29dp"
        android:ems="15"
        android:hint="@string/amount_to_pay"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterAmount_textView" />

    <TextView
        android:id="@+id/paymentTypeResult_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:autofillHints="payment"
        android:hint="@string/paybill"
        android:inputType="none"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/paymentType_textView" />

    <TextView
        android:id="@+id/paybilNumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="PayBill Number"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber_textView"
        app:layout_constraintStart_toStartOf="@id/phoneNumber_textView"
        />

    <TextView
        android:id="@+id/paybillNumberResult_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="none"
        android:hint="@string/_247247"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        app:layout_constraintStart_toStartOf="@+id/etPhone"
        />

    <TextView
        android:id="@+id/enterAmount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/enter_amount"
        app:layout_constraintStart_toStartOf="@+id/btnPay"
        app:layout_constraintTop_toBottomOf="@id/paybilNumber_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>